--- a/arigato/catalog.html
+++ b/arigato/catalog.html
@@ -7,16 +7,16 @@
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700|Roboto:300,400,500,700,900&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800,900&amp;subset=latin-ext,vietnamese" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:100,300,400,500,700,800,900&amp;subset=cyrillic-ext" rel="stylesheet">
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
 </head>
 <body>
 	
 <div id="catalog-wrapper">
-	<header class="fixed">
+	<header class="fixed slideDown">
 		<div class="container">
 			<a href="index.html" id="logo">Arigato</a>
 			<nav>
@@ -29,9 +29,9 @@
 					<li><a href="catalog.html">Скидки</a></li>
 				</ul>
 			</nav>
-			<div class="phone"><a href="tel:0501123123">0501123123</a></div>
+			<div class="phone"><a href="tel:0501123123"><i class="flaticon-phone-call"></i>0501123123</a></div>
 			<a href= ""class="cart-icon">
-				<i class="fas fa-shopping-cart"></i>
+				<i class="flaticon-shopping-cart"></i>
 				<span class="items-in-bag">1</span>
 			</a>
 		</div>
