--- a/arigato/index.html
+++ b/arigato/index.html
@@ -304,6 +304,10 @@
 		</div>
 	</section>
 	<section class="catalog-presentation">
+		<div class="heading">
+			<h2>Популярные блюда</h2>
+			<p class="descr">Сегодня чаще всего заказывают</p>
+		</div>
 		<div class="catalog-presentation-wrapper container"></div>
 	</section>
 	<section class="link-section">
