--- a/arigato/index.html
+++ b/arigato/index.html
@@ -309,6 +309,29 @@
 			<p class="descr">Сегодня чаще всего заказывают</p>
 		</div>
 		<div class="catalog-presentation-wrapper container"></div>
+		<div class="bottom-container container">
+			<ul class="tags">
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+			</ul>
+			<a href="" class="btn-catalog">Каталог</a>
+		</div>
 	</section>
 	<section class="link-section">
 		<div class="container">
