--- a/arigato/index.html
+++ b/arigato/index.html
@@ -11,6 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800,900&amp;subset=latin-ext,vietnamese" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:100,300,400,500,700,800,900&amp;subset=cyrillic-ext" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 	
@@ -195,9 +196,9 @@
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 							viewBox="0 0 170 170" style="enable-background:new 0 0 170 170;" xml:space="preserve">
 							<style type="text/css">
-								.st0{fill:#E75959;}
+								.st4{fill:#E75959;}
 							</style>
-							<circle class="st0" cx="85" cy="85" r="40"/>
+							<circle class="st4" cx="85" cy="85" r="40"/>
 							<path d="M84,110l0.4,0.4c1.1,1.1,1.1,3,0,4.1c-0.6,0.6-1.3,0.9-2.1,0.9c-0.8,0-1.5-0.3-2.1-0.9l-0.4-0.4c-1.1-1.1-1.1-3,0-4.1
 								C81,108.9,82.9,108.9,84,110L84,110z M66.2,73.6V57.7c0-6,4.9-10.9,10.9-10.9h15.9c6,0,10.9,4.9,10.9,10.9v15.9
 								c0,6-4.9,10.9-10.9,10.9H77.1C71.1,84.4,66.2,79.5,66.2,73.6z M72.1,73.6c0,2.8,2.2,5,5,5h15.9c2.8,0,5-2.2,5-5V57.7
@@ -237,9 +238,9 @@
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 							viewBox="0 0 170 170" style="enable-background:new 0 0 170 170;" xml:space="preserve">
 						<style type="text/css">
-							.st0{fill:#E75959;}
+							.st4{fill:#E75959;}
 						</style>
-						<circle class="st0" cx="85" cy="85" r="40"/>
+						<circle class="st4" cx="85" cy="85" r="40"/>
 						<path d="M82.1,111.9V102c-3.4-1.2-5.8-4.5-5.8-8.3c0-1.6,1.3-2.9,2.9-2.9c1.6,0,2.9,1.3,2.9,2.9c0,1.6,1.3,2.9,2.9,2.9
 							c1.6,0,2.9-1.3,2.9-2.9c0-1.6,1.3-2.9,2.9-2.9c1.6,0,2.9,1.3,2.9,2.9c0,3.8-2.4,7.1-5.8,8.3v9.9c0,1.6-1.3,2.9-2.9,2.9
 							C83.4,114.9,82.1,113.5,82.1,111.9z M58.1,35.9C58.1,29.9,63,25,69,25H101c6,0,10.9,4.9,10.9,10.9c0,5-3.4,9.2-8,10.5V65
@@ -262,12 +263,12 @@
 					</div>
 					<div class="item">
 						<div class="svg">
-							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							<svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								viewBox="0 0 170 170" style="enable-background:new 0 0 170 170;" xml:space="preserve">
 							<style type="text/css">
-								.st0{fill:#E75959;}
+								.st4{fill:#E75959;}
 							</style>
-							<circle class="st0" cx="85" cy="85" r="40"/>
+							<circle class="st4" cx="85" cy="85" r="40"/>
 							<g>
 								<path d="M26.7,62h29.7V102H38.5c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1h17.9v3.2c0,1.7,1.4,3.1,3.1,3.1h6.5
 									c1.4,4.9,5.9,8.6,11.3,8.6c5.4,0,9.9-3.6,11.3-8.6h41.2c1.4,4.9,5.9,8.6,11.3,8.6s9.9-3.6,11.3-8.6h7.1c1.7,0,3.1-1.4,3.1-3.1V88
@@ -291,20 +292,23 @@
 		</div>
 	</section>
 	<section class="live-section">
-		<div class="container">
-			<div class="heading">
-				<h2 class="white">Arigato TV</h2>
-				<p class="descr">Будь в курсе всего что происходит у Нас на кухне</p>
+		<div class="parallax-bg"></div>
+			<div class="front-layer">
+			<div class="container">
+				<div class="heading container">
+					<h2 class="white">Arigato TV</h2>
+					<p class="descr">Будь в курсе всего что происходит у Нас на кухне</p>
+				</div>
 			</div>
-		</div>
-		<div class="live-video">
-			<iframe width="100%" height=100%" src="https://www.youtube.com/embed/lMeA_UJRAEQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			<!--<div class="play-button"><i class="fa fa-play"></i></div>-->
-		</div>
+			<div class="live-video">
+				<iframe width="100%" height=100%" src="https://www.youtube.com/embed/lMeA_UJRAEQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<!--<div class="play-button"><i class="fa fa-play"></i></div>-->
+			</div>
+			</div>
 		</div>
 	</section>
 	<section class="catalog-presentation">
-		<div class="heading">
+		<div class="heading container">
 			<h2>Популярные блюда</h2>
 			<p class="descr">Сегодня чаще всего заказывают</p>
 		</div>
@@ -330,48 +334,76 @@
 				<li><a href="">майонез</a></li>
 				<li><a href="">тобико</a></li>
 			</ul>
-			<a href="" class="btn-catalog">Каталог</a>
+			<a href="catalog.html" class="btn-catalog">Каталог</a>
 		</div>
 	</section>
-	<section class="link-section">
+	<section class="delivery-section">
 		<div class="container">
-			<a href="about.html" class="about">
-				<div class="descr">
-					<h3>О нас</h3>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu.</p>
-				</div>
-			</a>
-			<a href="delivery.html" class="delivery">
-				<div class="descr">
-					<h3>Доставка</h3>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu.</p>
-				</div>
-			</a>
-			<a href="sale.html" class="sale">
-				<div class="descr">
-					<h3>Скидки</h3>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu.</p>
-				</div>
-			</a>	
+			<div class="heading">
+				<h2>Доставка и оплата</h2>
+			</div>
+			<div class="svg-content">
+					
+			</div>
+			<div class="text-content">
+				<p>Заказы принимаются с 11:00 до 22:00 ежедневно. <br /> <br />Доставка</p>
+				<p>Среднее время доставки от 90 до 120 минут.<br /><br />Минимальный заказ - 199 грн., доставка бесплатно.</p>
+				<p>Оплата</p>
+				<p>Наличными курьеру, при получении заказа.<br /><br />С помощью карты Visa/Mastercard, через систему онлайн оплаты LiqPay.</p>
+				<p>К заказу бесплатно полагается комплект<br /><br />соевый соус - 50 мл, имбирь - 30 грамм, васаби - 15 грамм,<br /><br />в зависимости от объема заказа:<br />1-2 ролла: 1 комплект.<br />3-4 ролла: 2 комплект.<br />5-6 ролла: 3 комплекта.<br />+1 комплект на каждые следующие 2 ролла.</p>
+			</div>
 		</div>
 	</section>
 	<footer>
-		<a href="" class="logo-footer">Arigato</a>
-		<nav class="footer-nav">
-			<ul>
-				<span id="slide-line"></span>
-				<li><a href="catalog.html">Каталог</a></li>
-				<li><a href="catalog.html">О нас</a></li>
-				<li><a href="catalog.html">Контакты</a></li>
-				<li><a href="catalog.html">Доставка</a></li>
-				<li><a href="catalog.html">Скидки</a></li>
-			</ul>
-		</nav>
-		<ul class="social">
-			<li><a href="" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
-			<li><a href="" class="instagram"><i class="fab fa-instagram"></i></a></li>
-			<li><a tel="+38686868686" class="phone">+38686868686</a></li>
-		</ul>
+		<div class="container">
+			<div class="col">
+				<p>Lorem ipsum dolor sit amet, 
+				consectetur adipisicing elit, sed
+				do eiusmod tempor  ncididunt ut
+				labore et dolore magna aliqua</p>
+				<p>
+					<img src="img/cards.png" alt="">
+				</p>
+			</div>
+			<div class="col">
+				<span>Телефоны для заказов:</span>
+				<ul class="phones">
+					<li><a href="tel:057 758 99 47"><b>(057) 758 99 47</b></a></li>
+					<li><a href="tel:099 367 47 47"><b>(099) 367 47 47</b></a></li>
+					<li><a href="tel:096 367 47 47"><b>(096) 336 47 47</b></a></li>
+				</ul>
+				<p></p>
+				<p>
+					<span>Электронная почта:</span>
+					<span><a href="mailto:mail@arigato.com.ua"><b>mail@arigato.com.ua</b></a></span>
+				</p>
+			</div>
+			<div class="col">
+				<ul class="footer-nav">
+					<li><a href="">Новости</a></li>
+					<li><a href="">Акции</a></li>
+					<li><a href="">Доставка и оплата</a></li>
+					<li><a href="">О нас</a></li>
+					<li><a href="">Бонусы</a></li>
+					<li><a href="">Вакансии</a></li>
+					<li><a href="">Информация для партнеров</a></li>
+				</ul>
+			</div>
+			<div class="col">
+				<p>Подписывайся и первый  узнавай о всех новостях</p>
+				<ul class="social-footer">
+					<li><a href=""><i class="fab fa-instagram"></i></a></li>
+					<li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+					<li><a href=""><i class="fab fa-youtube"></i></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="bottom">
+			<div class="container">
+				<span class="left">© Arigato 2018</span>
+				<span class="right">Created by <a href=""><b>VIRAL</b></a></span>
+			</div>
+		</div>	
 	</footer>
 </div>
 
