--- a/arigato/index.html
+++ b/arigato/index.html
@@ -83,11 +83,11 @@
 			<nav>
 				<ul class="main-nav">
 					<span id="slide-line"></span>
-					<li><a href="catalog.html">О нас</a></li>
-					<li><a href="catalog.html">Arigato TV</a></li>
-					<li><a href="catalog.html">Каталог</a></li>
-					<li><a href="catalog.html">Контакты</a></li>
-					<li><a href="catalog.html">Доставка</a></li>
+					<li><a href="#about">О нас</a></li>
+					<li><a href="#tv">Arigato TV</a></li>
+					<li><a href="#catalog">Каталог</a></li>
+					<li><a href="#delivery">Доставка</a></li>
+					<li><a href="#footer">Контакты</a></li>
 				</ul>
 			</nav>
 			<div class="phone"><a href="tel:0501123123"><i class="fi flaticon-phone-call"></i>0501123123</a></div>
@@ -180,7 +180,7 @@
 			<li><a href="" class="youtube"><i class="fab fa-youtube"></i></a></li>
 		</ul>-->
 	</section>
-	<section class="about-section">
+	<section class="about-section" id="about">
 		<div class="container">
 			<div class="heading">
 				<h2>Что такое Arigato?</h2>
@@ -291,7 +291,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="live-section">
+	<section class="live-section" id="tv">
 		<div class="parallax-bg"></div>
 			<div class="front-layer">
 			<div class="container">
@@ -307,7 +307,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="catalog-presentation">
+	<section class="catalog-presentation" id="catalog">
 		<div class="heading container">
 			<h2>Популярные блюда</h2>
 			<p class="descr">Сегодня чаще всего заказывают</p>
@@ -338,12 +338,13 @@
 		</div>
 	</section>
 	<section class="delivery-section">
+		<div class="anchor" id="delivery"></div>
 		<div class="container">
 			<div class="heading">
 				<h2>Доставка и оплата</h2>
 			</div>
 			<div class="svg-content">
-					
+				<img src="img/delivery-girl.svg" alt="">
 			</div>
 			<div class="text-content">
 				<p>Заказы принимаются с 11:00 до 22:00 ежедневно. <br /> <br />Доставка</p>
@@ -354,7 +355,7 @@
 			</div>
 		</div>
 	</section>
-	<footer>
+	<footer id="footer">
 		<div class="container">
 			<div class="col">
 				<p>Lorem ipsum dolor sit amet, 
