--- a/arigato/index.html
+++ b/arigato/index.html
@@ -96,6 +96,11 @@
 			</a>
 		</div>
 	</header>
+	<div class="cart-container">
+		<div class="cart-head">
+			<div class="icon-close"><i class="fa fa-times" ></i></div> 
+		</div>
+	</div>
 	<section class="intro-section">
 		<div class="slick-slider">
 			<div class="slide slide-1">
@@ -169,7 +174,6 @@
 			<li class="col">50%<span>50%</span></li>
 			<li class="col">150<span>грн</span></li>
 		</ul>
-
 
 			<a class="slick-prev"><i class="flaticon-back"></i></a>
 			<a class="slick-next"><i class="flaticon-next-1"></i></a>
@@ -413,6 +417,8 @@
 <script src="js/catalog-presentation.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
 <script src="js/common.js"></script>
+<script src="js/local-storage.js"></script>
+<script src="js/cart.js"></script>
 
 </body>
 </html>
