--- a/arigato/catalog.html
+++ b/arigato/catalog.html
@@ -97,18 +97,21 @@
 			</a>
 		</div>
 	</header>
+	<div class="cart-container">
+		
+	</div>
 	<section class="catalog-section">
 		<div class="container">
 			<div class="filter-top">
 				<ul class="category">
-					<li><a class="active" id="all">Все категории</a></li>
+					<li><a class="active" id="all-categories">Все категории</a></li>
 					<li><a>Суши</a></li>
 					<li><a>Пицца</a></li>
 					<li><a>Напитки</a></li>
 					<li><a>Прочее</a></li>
 				</ul>
 				<ul class="features">
-					<li><a class="active">Все</a></li>
+					<li><a class="active" id="all-features">Все</a></li>
 					<li><a>с лососем</a></li>
 					<li><a>без лука</a></li>
 					<li><a>маки роллы</a></li>
@@ -187,6 +190,8 @@
 <script src="js/catalog-parse.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
 <script src="js/common.js"></script>
+<script src="js/local-storage.js"></script>
+<script src="js/cart.js"></script>
 
 </body>
 </html>
