--- a/arigato/item.html
+++ b/arigato/item.html
@@ -93,12 +93,14 @@
 			<div class="phone"><a href="tel:0501123123"><i class="fi flaticon-phone-call"></i>0501123123</a></div>
 			<a href= ""class="cart-icon">
 				<i class="fi flaticon-shopping-cart"></i>
-				<span class="items-in-bag">1</span>
+				<span class="items-in-bag"></span>
 			</a>
 		</div>
 	</header>
 	<div class="cart-container">
-		
+		<div class="cart-head">
+			<div class="icon-close"><i class="fa fa-times" ></i></div> 
+		</div>
 	</div>
 	<section class="item-section">
 		
