--- a/arigato/catalog.html
+++ b/arigato/catalog.html
@@ -99,7 +99,11 @@
 	</header>
 	<div class="cart-container">
 		<div class="cart-head">
-			<div class="icon-close"><i class="fa fa-times" ></i></div> 
+			<div class="icon-cart"><i class="fi flaticon-shopping-cart"></i>Корзина</div>
+			<div class="icon-close"><i class="fa fa-times"></i></div> 
+		</div>
+		<div class="cart-items-container">
+			
 		</div>
 	</div>
 	<section class="catalog-section">
@@ -191,9 +195,9 @@
 <script src="js/data-catalog.js"></script>
 <script src="js/catalog-parse.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
-<script src="js/common.js"></script>
 <script src="js/local-storage.js"></script>
 <script src="js/cart.js"></script>
+<script src="js/common.js"></script>
 
 </body>
 </html>
