--- a/arigato/index.html
+++ b/arigato/index.html
@@ -168,6 +168,13 @@
 		<div class="cart-items-container">
 			
 		</div>
+		<div class="order-block">
+			<div class="total-row">
+				<b>К оплате</b>
+				<div class="total-price"><b>636</b>грн</div>
+			</div>
+			<a class="button btn-red btn-order">Заказать</a>
+		</div>
 	</div>
 	<section class="intro-section">
 		<div class="slick-slider">
