--- a/arigato/index.html
+++ b/arigato/index.html
@@ -278,44 +278,27 @@
 			<h3>мы вас накормим!</h3>
 			<div>
 				<a class="button btn-red">Сделать заказ</a>
-				<a class="button btn-light">Сделать заказ</a>
+				<a href="catalog.html" class="button btn-light">смотреть меню</a>
 			</div>
 		</div>
 		<div class="slick-slider">
-			<div class="slide">
+			<div class="item slide" id="1">
 				<div class="img-big"><img src="img/intro-bg.jpg" alt=""><div class="bg"></div></div>
 			</div>
-			<div class="slide">
+			<div class="item slide" id="2">
 				<div class="img-big"><img src="img/intro-bg.jpg" alt=""><div class="bg"></div></div>
 			</div>
-			<div class="slide">
+			<div class="item slide" id="3">
 				<div class="img-big"><img src="img/intro-bg.jpg" alt=""><div class="bg"></div></div>
 			</div>
 		</div>
 		<ul class="item-info slide-1">
 			<li class="col heading active">Суши<span><b>Угроь</b></span></li>
-			<li class="col heading">Суши<span><b>Угроь</b></span></li>
-			<li class="col heading">Суши<span><b>Угроь</b></span></li>
-			
 			<li class="col active">150<span>грамм</span></li>
-			<li class="col">150<span>грамм</span></li>
-			<li class="col">150<span>грамм</span></li>
-
 			<li class="col active">320<span>каллорий</span></li>
-			<li class="col">320<span>каллорий</span></li>
-			<li class="col">320<span>каллорий</span></li>
-
 			<li class="col active">200<span>гр. рыбы</span></li>
-			<li class="col">200<span>гр. рыбы</span></li>
-			<li class="col">200<span>гр. рыбы</span></li>
-			
-			<li class="col active">50%<span>50%</span></li>
-			<li class="col">50%<span>50%</span></li>
-			<li class="col">50%<span>50%</span></li>
-
+			<li class="col active">50%<span>риса</span></li>
 			<li class="col active">150<span>грн</span></li>
-			<li class="col">150<span>грн</span></li>
-			<li class="col">150<span>грн</span></li>
 
 			<a class="slick-prev"><i class="flaticon-back"></i></a>
 			<a class="slick-next"><i class="flaticon-next-1"></i></a>
@@ -333,6 +316,7 @@
 		</div>
 		<div class="catalog-presentation-wrapper container"></div>
 		<div class="bottom-container container">
+			<a href="catalog.html" class="btn-catalog">Смотреть полное меню</a>
 			<ul class="tags">
 				<li><a href="">рис</a></li>
 				<li><a href="">майонез</a></li>
@@ -352,11 +336,21 @@
 				<li><a href="">рис</a></li>
 				<li><a href="">майонез</a></li>
 				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>
+				<li><a href="">тобико</a></li>
+				<li><a href="">рис</a></li>
+				<li><a href="">майонез</a></li>	
 			</ul>
-			<a href="catalog.html" class="btn-catalog">Каталог</a>
 		</div>
 	</section>
-
+	
 	<section class="live-section" id="tv">
 		<div class="parallax-bg"></div>
 			<div class="front-layer">
@@ -373,19 +367,26 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="new-section">
+		<div class="container">
+		<div class="heading">
+			<h2>Новинки</h2>
+			<div class="catalog-new-wrapper"></div>
+			<a href="catalog.html" class="btn-catalog">Смотреть полное меню</a>
+		</div>
+		</div>	
+	</section>
 	
 	<footer id="footer">
 		<div class="container">
-			<div class="col">
-				<p>Lorem ipsum dolor sit amet, 
-				consectetur adipisicing elit, sed
-				do eiusmod tempor  ncididunt ut
-				labore et dolore magna aliqua</p>
-				<p>
-					<img src="img/cards.png" alt="">
+			<div class="col col-s">
+				<p>TM «Arigato» является 
+					зарегистрированной
+					торговой маркой. 
 				</p>
 			</div>
-			<div class="col">
+			<div class="col col-s">
 				<span>Телефоны для заказов:</span>
 				<ul class="phones">
 					<li><a href="tel:057 758 99 47"><b>(057) 758 99 47</b></a></li>
@@ -393,35 +394,31 @@
 					<li><a href="tel:096 367 47 47"><b>(096) 336 47 47</b></a></li>
 				</ul>
 				<p></p>
+				
+			</div>
+			<div class="col col-s">
 				<p>
 					<span>Электронная почта:</span>
 					<span><a href="mailto:mail@arigato.com.ua"><b>mail@arigato.com.ua</b></a></span>
 				</p>
 			</div>
-			<div class="col">
-				<ul class="footer-nav">
-					<li><a href="">Новости</a></li>
-					<li><a href="">Акции</a></li>
-					<li><a href="">Доставка и оплата</a></li>
-					<li><a href="">О нас</a></li>
-					<li><a href="">Бонусы</a></li>
-					<li><a href="">Вакансии</a></li>
-					<li><a href="">Информация для партнеров</a></li>
-				</ul>
-			</div>
-			<div class="col">
-				<p>Подписывайся и первый  узнавай о всех новостях</p>
+			<div class="col col-l">
+				<p>Мы в социальных сетях</p>
 				<ul class="social">
 					<li><a href=""><i class="fab fa-instagram"></i></a></li>
 					<li><a href=""><i class="fab fa-facebook-f"></i></a></li>
 					<li><a href=""><i class="fab fa-youtube"></i></a></li>
 				</ul>
 			</div>
+			<div class=" col col-l">
+				<p>Узнавай первый о всех новостях</p>
+				<p class="subscribe"><input type="text" id="e-mail" placeholder="Введите свой Email"><a href="" class="btn-red">Подписаться</a></p>
+			</div>
 		</div>
 		<div class="bottom">
 			<div class="container">
 				<span class="left">© Arigato 2018</span>
-				<span class="right">Created by <a href=""><b>VIRAL</b></a></span>
+				<span class="right">Created by <a href="http://viral.com.ua/"><b>VIRAL</b></a></span>
 			</div>
 		</div>	
 	</footer>
