--- a/arigato/item.html
+++ b/arigato/item.html
@@ -213,16 +213,13 @@
 	</section>
 	<footer id="footer">
 		<div class="container">
-			<div class="col">
-				<p>Lorem ipsum dolor sit amet, 
-				consectetur adipisicing elit, sed
-				do eiusmod tempor  ncididunt ut
-				labore et dolore magna aliqua</p>
-				<p>
-					<img src="img/cards.png" alt="">
+			<div class="col col-s">
+				<p>TM «Arigato» является 
+					зарегистрированной
+					торговой маркой. 
 				</p>
 			</div>
-			<div class="col">
+			<div class="col col-s">
 				<span>Телефоны для заказов:</span>
 				<ul class="phones">
 					<li><a href="tel:057 758 99 47"><b>(057) 758 99 47</b></a></li>
@@ -230,35 +227,31 @@
 					<li><a href="tel:096 367 47 47"><b>(096) 336 47 47</b></a></li>
 				</ul>
 				<p></p>
+				
+			</div>
+			<div class="col col-s">
 				<p>
 					<span>Электронная почта:</span>
 					<span><a href="mailto:mail@arigato.com.ua"><b>mail@arigato.com.ua</b></a></span>
 				</p>
 			</div>
-			<div class="col">
-				<ul class="footer-nav">
-					<li><a href="">Новости</a></li>
-					<li><a href="">Акции</a></li>
-					<li><a href="">Доставка и оплата</a></li>
-					<li><a href="">О нас</a></li>
-					<li><a href="">Бонусы</a></li>
-					<li><a href="">Вакансии</a></li>
-					<li><a href="">Информация для партнеров</a></li>
-				</ul>
-			</div>
-			<div class="col">
-				<p>Подписывайся и первый  узнавай о всех новостях</p>
+			<div class="col col-l">
+				<p>Мы в социальных сетях</p>
 				<ul class="social">
 					<li><a href=""><i class="fab fa-instagram"></i></a></li>
 					<li><a href=""><i class="fab fa-facebook-f"></i></a></li>
 					<li><a href=""><i class="fab fa-youtube"></i></a></li>
 				</ul>
 			</div>
+			<div class=" col col-l">
+				<p>Узнавай первый о всех новостях</p>
+				<p class="subscribe"><input type="text" id="e-mail" placeholder="Введите свой Email"><a href="" class="btn-red">Подписаться</a></p>
+			</div>
 		</div>
 		<div class="bottom">
 			<div class="container">
 				<span class="left">© Arigato 2018</span>
-				<span class="right">Created by <a href=""><b>VIRAL</b></a></span>
+				<span class="right">Created by <a href="http://viral.com.ua/"><b>VIRAL</b></a></span>
 			</div>
 		</div>	
 	</footer>
