--- a/arigato/index.html
+++ b/arigato/index.html
@@ -169,6 +169,7 @@
 			<a href= ""class="cart-icon">
 				<i class="fi flaticon-shopping-cart"></i>
 				<span class="items-in-bag"></span>
+				<div class="total-price"><b>0</b>грн</div>
 			</a>
 		</div>
 		<nav id="nav">
@@ -202,7 +203,7 @@
 		<div class="order-block">
 			<div class="total-row">
 				<b>К оплате</b>
-				<div class="total-price"><b>636</b>грн</div>
+				<div class="total-price"><b>0</b>грн</div>
 			</div>
 			<div class="cart-button-block">
 				<a class="button btn-red btn-open-form">Заказать</a>
@@ -282,27 +283,23 @@
 			</div>
 		</div>
 		<div class="slick-slider">
-			<div class="item slide" id="1">
-				<div class="img-big"><img src="img/intro-bg.jpg" alt=""><div class="bg"></div></div>
-			</div>
-			<div class="item slide" id="2">
-				<div class="img-big"><img src="img/intro-bg.jpg" alt=""><div class="bg"></div></div>
-			</div>
-			<div class="item slide" id="3">
-				<div class="img-big"><img src="img/intro-bg.jpg" alt=""><div class="bg"></div></div>
-			</div>
+			<a href="item.html" class="open-item item slide" id="0">
+				<div class="img-big"><img src="img/радуга-big.jpg" alt=""><div class="bg"></div></div>
+			</a>
+			<a href="item.html" class="open-item item slide" id="1">
+				<div class="img-big"><img src="img/фила креветка-big.jpg" alt=""><div class="bg"></div></div>
+			</a>
+			<a href="item.html" class="open-item item slide" id="2">
+				<div class="img-big"><img src="img/дракон-big.jpg" alt=""><div class="bg"></div></div>
+			</a>
 		</div>
-		<ul class="item-info slide-1">
-			<li class="col heading active">Суши<span><b>Угроь</b></span></li>
-			<li class="col active">150<span>грамм</span></li>
-			<li class="col active">320<span>каллорий</span></li>
-			<li class="col active">200<span>гр. рыбы</span></li>
-			<li class="col active">50%<span>риса</span></li>
-			<li class="col active">150<span>грн</span></li>
-
+		<div class="item-info-container">
+			<ul class="item-info">
+				
+			</ul>
 			<a class="slick-prev"><i class="flaticon-back"></i></a>
 			<a class="slick-next"><i class="flaticon-next-1"></i></a>
-		</ul>
+		</div>
 		<!--<ul class="social-intro">
 			<li><a href="" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
 			<li><a href="" class="instagram"><i class="fab fa-instagram"></i></a></li>
