--- a/bus4you/index.html
+++ b/bus4you/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
 	<meta charset="UTF-8">
 	<title>Bus4you</title>
 	<link rel="stylesheet" href="css/libs.min.css">
