--- a/B4Y/index.html
+++ b/B4Y/index.html
@@ -36,8 +36,9 @@
 		</div>
 	</div> -->
 	<header>
-		<div class="pre-header">
-			<div class="container-wide">
+		<a href = "index.html" id="logo">Bus<strong>For</strong>You</a>
+		<div class="header-container">
+			<div class="pre-header">
 				<ul class="phones">
 					<li><i class="flag ico-ua"></i><a href="tel:+38 (066) 362 05 06">+38 (066) 362 05 06</a></li>
 					<li><a href="tel:+38 (073) 127 28 48">+38 (073) 127 28 48</a></li>
@@ -45,10 +46,7 @@
 					<li><i class="flag ico-ru"></i><a href="tel:+79 (977) 891 33 71">+79 (977) 891 33 71</a></li>
 				</ul>
 			</div>
-		</div>
-		<div class="header">
-			<div class="container-wide">
-				<a href = "index.html" id="logo">Bus<strong>For</strong>You</a>
+			<div class="header">
 				<div class="button-block">
 					<a href="" class="viber"><i class="ico-viber"></i><span>viber бот</span></a>
 					<a href="" class="phone"><i class="ico-ring"></i><span>заказать звонок</span></a>
@@ -56,11 +54,16 @@
 				<ul class="main-nav">
 					<li><a href="index.html">Главная</a></li>
 					<li><a href="index.html">О сервисе</a></li>
-					<li><a href="index.html">Услуги</a></li>
+					<li><a href="index.html">Услуги</a>
 					<li><a href="index.html">Отзывы</a></li>
 					<li><a href="index.html">Блог</a></li>
 					<li><a href="index.html">Контакты</a></li>
 				</ul>
+			</div>
+		</div>
+		<div class="hamburger hamburger--squeeze">
+			<div class="hamburger-box">
+				<div class="hamburger-inner"></div>
 			</div>
 		</div>
 	</header>
@@ -72,7 +75,7 @@
 					<label for="trip-type">Услуга <span>Тип поездки</span></label>
 					<select name="trip-type" id="trip-type">
 						<option value="Международная" selected>Международная</option>
-						<option value="Внутри страны">Внутри страны</option>
+						<!-- <option value="Внутри страны">Внутри страны</option> -->
 					</select>
 				</div>
 				<div class="row">
@@ -133,7 +136,7 @@
 			<div class="heading-block">
 				<h2>Наши услуги</h2>
 			</div>
-			<div class="triple-row">
+			<div class="triple-row mobile-slider">
 				<div class="triple-col">
 					<h4>Международные перевозки</h4>
 					<p>Пассажирские перевозки по маршрутам Харьков > Москва, Москва > Харьков. Так же, в ближайшее время появится много новых маршрутов.</p>
@@ -194,7 +197,7 @@
 				<h2>Наши услуги</h2>
 				<a href="routes.html" class="to-main">все маршруты ></a>
 			</div>
-			<div class="double-row">
+			<div class="double-row mobile-slider">
 				<div class="double-col">
 					<h4>Харьков <i class="arrow fas fa-arrow-right"></i> Москва</h4>
 					<ul class="trip-details">
@@ -249,7 +252,7 @@
 				<h2 class="color-white">Отзывы наших клиентов</h2>
 				<a href="feedback.html" class="to-main">Все отзывы ></a>
 			</div>
-			<div class="quad-row">
+			<div class="quad-row mobile-slider">
 				<div class="quad-col"><img class="feed" src="img/feed-1.jpg" alt=""></div>
 				<div class="quad-col"><img class="feed" src="img/feed-1.jpg" alt=""></div>
 				<div class="quad-col"><img class="feed" src="img/feed-1.jpg" alt=""></div>
