--- a/B4Y/index.html
+++ b/B4Y/index.html
@@ -68,6 +68,10 @@
 		</div>
 	</header>
 	<section class="intro-section">
+		<ul class="phones only-mobile">
+			<li><i class="flag ico-ua"></i><a href="tel:+38 (066) 362 05 06">+38 (066) 362 05 06</a></li>
+			<li><i class="flag ico-ru"></i><a href="tel:+79 (977) 891 33 71">+79 (977) 891 33 71</a></li>
+		</ul>
 		<div class= "route-map"></div>
 		<div class="container-wide">
 			<form id="order">
@@ -225,7 +229,7 @@
 		<div class="container">
 			<div class="heading-block">
 				<h2>Ваша поездка будет максимально комфортной</h2>
-				<span class="addition">*Всё это входит в стоимость билета!</span>
+				<span class="addition">Всё это входит в стоимость билета!</span>
 			</div>
 			<div class="triple-row badges">
 				<div class="triple-col">
@@ -284,7 +288,7 @@
 			</div>
 		</div>
 	</section>	
-	<section class="blog-section">
+	<!-- <section class="blog-section">
 		<div class="container">
 			<div class="heading-block">
 				<h2>Наш блог</h2>
@@ -307,7 +311,7 @@
 				</div>
 			</div>
 		</div>	
-	</section>
+	</section> -->
 	<footer>
 		<div class="container">
 			<a href="mailto:busforyouticket@gmail.com ">busforyouticket@gmail.com</a>
