--- a/index.html
+++ b/index.html
@@ -40,8 +40,43 @@
         </div>
 
         <div class="works-container clearfix">
-
             <div class="work-item">
+                <div class="caption">
+                    <h4 class="project-name">CashYou</h4>
+                    <p class="descr">Web application for online credits on Symfony PHP</p>
+                </div>
+                <a href="https://cashyou.ua/" target="_blank">
+                    <img src="img/portfolio-CY.png" alt="">
+                </a>
+            </div>
+            <div class="work-item">
+                <div class="caption">
+                    <h4 class="project-name">Bus4You</h4>
+                    <p class="descr">Web application for bus trip orders</p>
+                </div>
+                <a href="http://bus4you.com.ua/" target="_blank">
+                    <img src="img/portfolio-B4Y.png" alt="">
+                </a>
+            </div>
+            <div class="work-item">
+                <div class="caption">
+                    <h4 class="project-name">Arigato</h4>
+                    <p class="descr">Sushi online shop</p>
+                </div>
+                <a href="https://alexander-shatravka.github.io/arigato/" target="_blank">
+                    <img src="img/portfolio-arigato.png" alt="">
+                </a>
+            </div>
+            <div class="work-item">
+                <div class="caption">
+                    <h4 class="project-name">Time for machine</h4>
+                    <p class="descr">Wordpress site for selling mechanic toys in Hong Kong </p>
+                </div>
+                <a href="https://alexander-shatravka.github.io/M-store" target="_blank">
+                    <img src="img/portfolio-T4M.png" alt="">
+                </a>
+            </div>
+            <!-- <div class="work-item">
                 <div class="caption">
                     <h4 class="project-name">Yoga</h4>
                     <p class="descr">Single page responsive web site</p>
@@ -50,7 +85,6 @@
                     <img src="img/yoga-demo.jpg" alt="">
                 </a>
             </div>
-
             <div class="work-item">
                 <div class="caption">
                     <h4 class="project-name">Black & White</h4>
@@ -79,7 +113,7 @@
                 <a href="https://alexander-shatravka.github.io/M-store" target="_blank">
                     <img src="img/m-store-demo.jpg" alt="">
                 </a>
-            </div>
+            </div> -->
 
         </div>
 
