--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="photo-large"><img src="img/avatar-large.jpg" alt=""></div>
 
             <div class="about">
-                <h3>Web UI Developer</h3>
-                <p>Hi, I've been  practicing with Web UI and Frontend Development about 1 year. Here is a page where you can view my works and contact me.</p>
+                <h3>Web UI Developer, JS Developer</h3>
+                <p>Hi, I've been working with Web Development about 1.5 year. Here is a page where you can view my works and contact me.</p>
             </div>
 
             <ul class="skills">
@@ -72,7 +72,7 @@
                     <h4 class="project-name">Time for machine</h4>
                     <p class="descr">Wordpress site for selling mechanic toys in Hong Kong </p>
                 </div>
-                <a href="https://alexander-shatravka.github.io/M-store" target="_blank">
+                <a href="http://timeformachine.hk" target="_blank">
                     <img src="img/portfolio-T4M.png" alt="">
                 </a>
             </div>
