--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <a href="https://alexander-shatravka.github.io/M-store" target="_blank">
                     <img src="img/m-store-demo.jpg" alt="">
                 </a>
-            </div> -->
+            </div> 
 
         </div>
 
